支持馆员操作的接口